// fixing id for nav

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="#" class="text-2xl font-bold text-gray-800">Florianópolis Essências</a>
             <ul class="flex items-center space-x-6">
                 <li><a href="#about" class="hover:text-indigo-600 transition-colors">Sobre Nós</a></li>
-                <li><a href="#benefits" class="hover:text-indigo-600 transition-colors">Vantagens</a></li>
+                <li><a href="#focus" class="hover:text-indigo-600 transition-colors">Interesses</a></li>
                 <li><a href="#contact" class="bg-indigo-600 text-white px-4 py-2 rounded-full hover:bg-indigo-700 transition-transform transform hover:scale-105">Seja um Parceiro</a></li>
             </ul>
         </nav>
@@ -92,7 +92,7 @@
             </section> -->
 
             <!-- What We're Looking For Section -->
-            <section class="bg-gray-100 -mx-6 px-6 py-16 md:py-24 rounded-xl mt-8">
+            <section id="focus" class="bg-gray-100 -mx-6 px-6 py-16 md:py-24 rounded-xl mt-8">
                 <div class="text-center mb-12 max-w-3xl mx-auto">
                     <h2 class="text-3xl font-bold text-gray-800">Nosso Foco de Interesse</h2>
                     <p class="mt-2 text-lg text-gray-600">Procuramos fornecedores de excelência em diversas categorias para compor nosso portfólio de lançamento.</p>
