// text center on nav button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="flex items-center space-x-6">
                 <a href="#about" class="hidden md:block hover:text-indigo-600 transition-colors">Sobre Nós</a>
                 <a href="#focus" class="hidden md:block hover:text-indigo-600 transition-colors">Interesses</a>
-                <a href="#contact" class="bg-indigo-600 text-white px-4 py-2 rounded-full hover:bg-indigo-700 transition-transform transform hover:scale-105">Seja um Parceiro</a>
+                <a href="#contact" class="bg-indigo-600 text-white px-4 py-2 rounded-full hover:bg-indigo-700 transition-transform transform hover:scale-105 text-center">Seja um Parceiro</a>
             </div>
         </nav>
     </header>
