--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <p class="text-lg text-gray-600 leading-relaxed">
                     A <strong class="text-indigo-700">Floripa Essências</strong> não é apenas uma nova loja, é a expansão de um legado. Seremos mais uma empresa do <strong class="text-indigo-700">Grupo Moreira</strong>, que em Setembro de 2025 completa <strong class="text-indigo-700">89 anos de existência</strong> com a Perfumaria Moreira.
                     <br><br>
-                    Nossa futura loja em um ponto estratégico de Florianópolis nasce do desejo de replicar um modelo de sucesso já validado: nossa loja conceito que opera a todo vapor em Fortaleza há quatro anos. O objetivo é claro: criar um destino único para os amantes de fragrâncias, com uma curadoria exclusiva de essências <strong class="text-indigo-700">FAV 105</strong>, perfumaria fina, produtos para ambiência, válvulas e embalagens de luxo. Para isso, buscamos um <strong class="text-indigo-700">fornecedor exclusivo de essências</strong> que compartilhe nossa paixão pela qualidade e queira crescer junto conosco.
+                    Nossa futura loja em um ponto estratégico, no centro da cidade de Florianópolis nasce do desejo de replicar um modelo de sucesso já validado: nossa loja conceito que opera a todo vapor em Fortaleza há quatro anos. O objetivo é claro: criar um destino único para os amantes de fragrâncias, com uma curadoria exclusiva de essências <strong class="text-indigo-700">FAV 105</strong>, fragrância de ambiência, válvulas e embalagens de luxo. Para isso, buscamos um <strong class="text-indigo-700">fornecedor exclusivo de essências</strong> que compartilhe nossa paixão pela qualidade e queira crescer junto conosco.
                 </p>
             </section>
 
@@ -71,12 +71,12 @@
             <section id="proposal" class="bg-gray-100 -mx-6 px-6 py-16 md:py-24 rounded-xl mt-16 md:mt-24 scroll-mt-20">
                 <div class="text-center mb-12 max-w-3xl mx-auto ">
                     <h2 class="text-3xl font-bold text-gray-800">Nossa Proposta: Exclusividade e Condições Especiais para Crescermos Juntos</h2>
-                    <p class="mt-2 text-lg text-gray-600">Buscamos um fornecedor exclusivo para nossa segunda unidade e buscamos condições claras e vantajosas para o primeiro pedido.</p>
+                    <p class="mt-2 text-lg text-gray-600">Buscamos um fornecedor exclusivo para nossa segunda unidade que nos ofereça condições claras e vantajosas para o primeiro pedido.</p>
                 </div>
                 <div class="grid lg:grid-cols-2 gap-8 max-w-5xl mx-auto">
                     <!-- Card 1: The Product -->
                     <div class="bg-white p-8 rounded-lg shadow-lg">
-                        <h3 class="text-xl font-bold text-indigo-700 mb-4">O Produto: Exclusividade e Qualidade FAV 105</h3>
+                        <h3 class="text-xl font-bold text-indigo-700 mb-4">Exclusividade e Qualidade FAV 105</h3>
                         <h4 class="font-semibold text-gray-800 mb-3">Loja Exclusiva com as Fragrâncias FAV 105</h4>
                         <p class="text-gray-600 mb-4">Buscamos a melhor qualidade possível com preços-alvo competitivos em dólar por quilo:</p>
                         <ul class="space-y-3 list-check text-gray-700">
