--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="grid lg:grid-cols-2 gap-8 max-w-5xl mx-auto">
                     <!-- Card 1: The Product -->
                     <div class="bg-white p-8 rounded-lg shadow-lg">
-                        <h3 class="text-xl font-bold text-indigo-700 mb-4">Essência: Exclusividade e Qualidade FAV 105</h3>
+                        <h3 class="text-xl font-bold text-indigo-700 mb-4">A Essência: Exclusividade e Qualidade FAV 105</h3>
                         <h4 class="font-semibold text-gray-800 mb-3">Loja Exclusiva com as Fragrâncias FAV 105</h4>
                         <p class="text-gray-600 mb-4">Buscamos a melhor qualidade possível com preços-alvo competitivos em dólar por quilo:</p>
                         <ul class="space-y-3 list-check text-gray-700">
