--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <p class="text-lg text-gray-600 leading-relaxed">
                     A <strong class="text-indigo-700">Floripa Essências</strong> não é apenas uma nova loja, é a expansão de um legado. Seremos mais uma empresa do <strong class="text-indigo-700">Grupo Moreira</strong>, que em Setembro de 2025 completa <strong class="text-indigo-700">89 anos de existência</strong> com a Perfumaria Moreira.
                     <br><br>
-                    Nossa futura loja em um ponto estratégico, no centro da cidade de Florianópolis nasce do desejo de replicar um modelo de sucesso já validado: nossa loja conceito que opera a todo vapor em Fortaleza há quatro anos. O objetivo é claro: criar um destino único para os amantes de fragrâncias, com uma curadoria exclusiva de essências <strong class="text-indigo-700">FAV 105</strong>, fragrância de ambiência, válvulas e embalagens de luxo. Para isso, buscamos um <strong class="text-indigo-700">fornecedor exclusivo de essências</strong> que compartilhe nossa paixão pela qualidade e queira crescer junto conosco.
+                    Nossa futura loja em um ponto estratégico, no centro da cidade de Florianópolis nasce do desejo de replicar um modelo de sucesso já validado: nossa loja conceito que opera a todo vapor em Fortaleza há quatro anos. O objetivo é claro: criar um destino único para os amantes de fragrâncias, com uma curadoria exclusiva de essências <strong class="text-indigo-700">FAV 105</strong>, perfumaria fina, fragrância para ambiência, válvulas e embalagens de luxo e especiais. Para isso, buscamos um <strong class="text-indigo-700">fornecedor exclusivo de essências</strong> que compartilhe nossa paixão pela qualidade e queira crescer junto conosco.
                 </p>
             </section>
 
