--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <!-- Card 2: The Business -->
                     <div class="bg-white p-8 rounded-lg shadow-lg">
                         <h3 class="text-xl font-bold text-indigo-700 mb-4">O Negócio: Condições de Lançamento</h3>
-                        <h4 class="font-semibold text-gray-800 mb-3">Implantação do Ponto de Venda em Florianópolis</h4>
+                        <h4 class="font-semibold text-gray-800 mb-3">Implantação do Ponto de Venda no centro de Florianópolis</h4>
                         <p class="text-gray-600 mb-4">Para um início forte, necessitamos de condições especiais para o primeiro pedido (após aprovação, enviaremos a relação de 2kg por fragrância):</p>
                         <ul class="space-y-3 list-check text-gray-700">
                             <li><strong>Valor Máximo do Pedido:</strong> R$ 150.000,00</li>
